--- a/sass/admin/block-editor-styles.scss
+++ b/sass/admin/block-editor-styles.scss
@@ -410,7 +410,7 @@ h6{
 		}
 	}
 	h1.editor-post-title__input {
-		padding: 10px 0;
+		padding: 10px 6px 10px 0;
 		transition: all 0.2s;
 		&.is-selected {
 			box-shadow: 0 0 0 1px var(--wp-admin-theme-color);
@@ -518,4 +518,12 @@ h4.wp-block.has-background,
 h5.wp-block.has-background,
 h6.wp-block.has-background {
   padding: 1.25em 2.375em;
+}
+
+/**
+ * 6.3 Compatibility fixes in block editor.
+ */
+ span.title-visibility svg {
+    width: 20px;
+    height: 40px;
 }
