--- a/sass/admin/wp-editor-styles.scss
+++ b/sass/admin/wp-editor-styles.scss
@@ -104,7 +104,7 @@ html {
 		max-width: 100% !important;
 	}
 	h1.editor-post-title__input {
-		padding: 10px 6px;
+		padding: 10px 6px 10px 0;
 		transition: all 0.2s;
 		&.is-selected {
 			box-shadow: 0 0 0 1px var(--wp-admin-theme-color);
@@ -529,4 +529,12 @@ body {
 	button {
 	  border-radius: 2px;
 	}
+}
+
+/**
+ * 6.3 Compatibility fixes in block editor.
+ */
+ span.title-visibility svg {
+    width: 20px;
+    height: 40px;
 }
